feat(routers): add config handler, modify router layout
