# docs/swagger.yaml
@@ -1,5 +1,180 @@
-basePath: /trade-agent
 definitions:
+  config.Analyze:
+    properties:
+      close_change_ratio_high:
+        type: number
+      close_change_ratio_low:
+        type: number
+      in_out_ratio:
+        type: number
+      max_loss:
+        type: number
+      open_close_change_ratio_high:
+        type: number
+      open_close_change_ratio_low:
+        type: number
+      out_in_ratio:
+        type: number
+      rsi_high:
+        type: number
+      rsi_low:
+        type: number
+      rsi_min_count:
+        type: integer
+      tick_analyze_max_period:
+        type: number
+      tick_analyze_min_period:
+        type: number
+      volume_pr_high:
+        type: number
+      volume_pr_low:
+        type: number
+    type: object
+  config.Config:
+    properties:
+      analyze:
+        $ref: '#/definitions/config.Analyze'
+      database:
+        $ref: '#/definitions/config.Database'
+      mqtt:
+        $ref: '#/definitions/config.MQTT'
+      quota:
+        $ref: '#/definitions/config.Quota'
+      schedule:
+        $ref: '#/definitions/config.Schedule'
+      server:
+        $ref: '#/definitions/config.Server'
+      switch:
+        $ref: '#/definitions/config.Switch'
+      target_cond:
+        $ref: '#/definitions/config.TargetCond'
+      trade:
+        $ref: '#/definitions/config.Trade'
+    type: object
+  config.Database:
+    properties:
+      database:
+        type: string
+      host:
+        type: string
+      passwd:
+        type: string
+      port:
+        type: string
+      time_zone:
+        type: string
+      user:
+        type: string
+    type: object
+  config.MQTT:
+    properties:
+      ca_path:
+        type: string
+      cert_path:
+        type: string
+      client_id:
+        type: string
+      host:
+        type: string
+      key_path:
+        type: string
+      passwd:
+        type: string
+      port:
+        type: string
+      user:
+        type: string
+    type: object
+  config.Quota:
+    properties:
+      fee_discount:
+        type: number
+      trade_fee_ratio:
+        type: number
+      trade_quota:
+        type: integer
+      trade_tax_ratio:
+        type: number
+    type: object
+  config.Schedule:
+    properties:
+      clean_event:
+        type: string
+      restart_sinopac:
+        type: string
+    type: object
+  config.Server:
+    properties:
+      http_port:
+        type: string
+      run_mode:
+        type: string
+      sinopac_srv_host:
+        type: string
+      sinopac_srv_port:
+        type: string
+    type: object
+  config.Switch:
+    properties:
+      buy:
+        type: boolean
+      buy_later:
+        type: boolean
+      forward_max:
+        type: integer
+      mean_time_forward:
+        type: integer
+      mean_time_reverse:
+        type: integer
+      reverse_max:
+        type: integer
+      sell:
+        type: boolean
+      sell_first:
+        type: boolean
+      simulation:
+        type: boolean
+    type: object
+  config.TargetCond:
+    properties:
+      black_category:
+        items:
+          type: string
+        type: array
+      black_stock:
+        items:
+          type: string
+        type: array
+      limit_price_high:
+        type: number
+      limit_price_low:
+        type: number
+      limit_volume:
+        type: integer
+      real_time_targets_count:
+        type: integer
+    type: object
+  config.Trade:
+    properties:
+      history_close_period:
+        type: integer
+      history_kbar_period:
+        type: integer
+      history_tick_period:
+        type: integer
+      hold_time_from_open:
+        type: number
+      total_open_time:
+        type: number
+      trade_in_end_time:
+        type: number
+      trade_in_wait_time:
+        type: integer
+      trade_out_end_time:
+        type: number
+      trade_out_wait_time:
+        type: integer
+    type: object
   dbagent.Balance:
     properties:
       discount:
@@ -70,7 +245,7 @@ definitions:
       volume:
         type: integer
     type: object
-  handlers.ErrorResponse:
+  routers.ErrorResponse:
     properties:
       attachment: {}
       response:
@@ -97,7 +272,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/routers.ErrorResponse'
       summary: DeletaAllBalance
       tags:
       - Balance
@@ -116,7 +291,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/routers.ErrorResponse'
       summary: GetAllBalance
       tags:
       - Balance
@@ -140,7 +315,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/routers.ErrorResponse'
       summary: ImportBalance
       tags:
       - Balance
@@ -180,6 +355,20 @@ paths:
       summary: GetTradeDayTargets
       tags:
       - Cache
+  /config:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/config.Config'
+      summary: GetAllConfig
+      tags:
+      - Config
   /order:
     delete:
       consumes:
@@ -192,7 +381,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/routers.ErrorResponse'
       summary: DeletaAllOrder
       tags:
       - Order
@@ -211,7 +400,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/routers.ErrorResponse'
       summary: GetAllOrder
       tags:
       - Order
@@ -235,7 +424,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/routers.ErrorResponse'
       summary: ImportOrder
       tags:
       - Order
@@ -255,7 +444,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/routers.ErrorResponse'
       summary: GetTradeDayTargets
       tags:
       - Targets
